--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     schedule:
       interval: "daily"
   - package-ecosystem: gradle
-    directory: "/java"
+    directory: "/src"
     schedule:
       interval: daily
       time: "02:00"
