--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,22 +6,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  lint-java:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Lint Java code
-        run: gradle spotlessJavaCheck
-
   test-java:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java-version: [ '11', '17' ]
+        java-version: [ '11', '17', '22' ]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -29,5 +18,7 @@ jobs:
           distribution: 'temurin'
           java-version: ${{ matrix.java-version }}
       - uses: gradle/actions/setup-gradle@v3
+      - name: Lint Java code
+        run: gradle spotlessJavaCheck
       - name: Test Java code
         run: gradle test
